--- a/listOfMagazines.css
+++ b/listOfMagazines.css
@@ -6,7 +6,7 @@
   --first-color-light:#4EA5FF ;
   --second-color: #004BB7;
   --white-color: #F5F7FA;
-  --body-font: "Nunito", sans-serif;
+  --body-font: "Roboto", sans-serif;
   --normal-font-size: 1rem;
   --z-fixed: 100;
 }
@@ -16,6 +16,7 @@
   box-sizing: border-box;
 }
 body {
+  
   position: relative;
   margin: var(--header-height) 0 0 0;
   padding: 0 1rem;
@@ -29,6 +30,7 @@ a {
 }
 img{
     width: 100%;
+    height: 100%;
 }
 .aside_logo{
     width: 50%;
@@ -121,16 +123,12 @@ img{
 .active {
   color: var(--second-color);
 }
-.active::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  width: 2px;
-  height: 32px;
-  background-color: var(--white-color);
-}
+
 .height-100 {
   height: 100vh;
+}
+.form-select {
+  width: fit-content;
 }
 @media screen and (min-width: 768px) {
   body {
