--- a/listOfMagazines.css
+++ b/listOfMagazines.css
@@ -76,7 +76,7 @@ img{
   transition: 0.5s;
   z-index: var(--z-fixed);
 }
-.nav {
+#nav {
   height: 100%;
   display: flex;
   flex-direction: column;
