--- a/listOfMagazines.css
+++ b/listOfMagazines.css
@@ -15,6 +15,7 @@
 ::after {
   box-sizing: border-box;
 }
+
 body {
   
   position: relative;
@@ -132,6 +133,10 @@ img{
 .form-select {
   width: fit-content;
 }
+.btn-primary{
+  background-color: var(--first-color-light);
+}
+
 @media screen and (min-width: 768px) {
   body {
     margin: calc(var(--header-height) + 1rem) 0 0 0;
